--- a/src/components/Feed/Search.css
+++ b/src/components/Feed/Search.css
@@ -3,18 +3,6 @@
     outline: none;
 }
 
-html, body
-{
-    height: 100%;
-    min-height: 100%;
-}
-
-body
-{
-    margin: 0;
-    background-color: #ffd8d8;
-}
-
 .tb
 {
     display: table;
@@ -37,7 +25,7 @@ input, button
     background-color: transparent;
 }
 
-.search-container
+#cover
 {
     position: absolute;
     top: 50%;
@@ -165,19 +153,3 @@ button span:before, button span:after
     background-color: #fff;
 }
 
-#ytd-url {
-  display: block;
-  position: fixed;
-  right: 0;
-  bottom: 0;
-  padding: 10px 14px;
-  margin: 20px;
-  color: #fff;
-  font-family: Nunito;
-  font-size: 14px;
-  text-decoration: none;
-  background-color: #ff7575;
-  border-radius: 4px;
-  box-shadow: 0 10px 20px -5px rgba(255, 117, 117, 0.86);
-  z-index: 125;
-}
