--- a/src/components/Feed/Search.css
+++ b/src/components/Feed/Search.css
@@ -18,26 +18,10 @@
 input, button
 {
     color: #fff;
-    font-family: Nunito;
     padding: 0;
     margin: 0;
     border: 0;
     background-color: transparent;
-}
-
-#cover
-{
-    position: absolute;
-    top: 50%;
-    left: 0;
-    right: 0;
-    width: 550px;
-    padding: 35px;
-    margin: -83px auto 0 auto;
-    background-color: #ff7575;
-    border-radius: 20px;
-    box-shadow: 0 10px 40px #ff7c7c, 0 0 0 20px #ffffffeb;
-    transform: scale(0.6);
 }
 
 form
@@ -48,14 +32,14 @@ form
 input[type="text"]
 {
     width: 100%;
-    height: 96px;
-    font-size: 60px;
+    height: 6vw;
+    font-size: 40px;
     line-height: 1;
 }
 
 input[type="text"]::placeholder
 {
-    color: #e16868;
+    color: #e7e7e7a6;
 }
 
 #s-cover
