--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -1,7 +1,4 @@
-body {
-  background-color: rgb(58, 99, 211);
-}
-form {
+/* form {
   border-radius: 5px;
   border-right: 2.5px solid black;
   border-bottom: 2.5px solid black;
@@ -59,4 +56,4 @@ button {
 .imgContainer input {
   border: none;
   padding: 2px 0 10px 2px ;
-}
+} */
