--- a/src/components/SignupForm/SignupForm.module.css
+++ b/src/components/SignupForm/SignupForm.module.css
@@ -1,7 +1,4 @@
-body {
-  background-color: rgb(58, 99, 211);
-}
-form {
+/* form {
   border-radius: 5px;
   border-right: 2.5px solid black;
   border-bottom: 2.5px solid black;
@@ -65,4 +62,4 @@ input[type=file] {
   border-radius: 4px;
   box-sizing: border-box;
   padding: 2px 0 10px 2px ;
-}
+} */
