--- a/src/pages/EventDetails/EventDetails.css
+++ b/src/pages/EventDetails/EventDetails.css
@@ -1,33 +1,31 @@
 .details-div {
-    margin: 20px;
+    display: flex;
+    flex-direction: column;
 }
 .details-h1 {
     color: black;
     background-color: palegoldenrod;
     margin-top: 5rem;
-    font-family: Georgia, 'Times New Roman', Times, serif;
     
 }
 
 .details-img {
     border: 2px solid white;
-    max-height: 500px;
+    height: 400px;
     max-width: 750px;
     min-height: 400px;
     
     border-radius: 10px;
     align-content: center;
-    margin-left: auto;
-    margin-right: auto;
+   
     display: block;
 }
 
-.display-img {
+.display-imgs {
     border-radius: 10px;  
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    
+    display: flex;
+    justify-content: space-evenly;
+    margin: 0 10px 0 10px;
 }
 
 .map-n-details {
