--- a/src/components/Comment/CommentCard.css
+++ b/src/components/Comment/CommentCard.css
@@ -1,18 +1,27 @@
+.comment-list {
+    display: flex;
+
+}
 .comment-card {
-    background-color: white;
-    border: 3px solid black;
-    background-color: rgb(242, 242, 242);
+    background-color: rgba(255, 253, 253, 0.76);
+    border-radius: 5px;
+    padding: 0 5px 0 5px;
+    margin: 8px;
 }
 
 #content {
-    font-size: 18px;
+    font-size: 15px;
 }
 
 #delete-btn {
-    background-color: red;
-    height: 40px;
-    width: 50px;
-    border-radius: 5%;
+    background-color: rgb(218, 2, 2);
+    color: white;
+    height: 20px;
+    width: 80px;
+    border-radius: 5px;
     text-align: center;
-    padding: 0px;
+    padding: auto;
+    margin: auto;
+    outline: none;
+    border: none;
 }
